fixed horizontal scrolling

--- a/src/components/loan-components/loanbuttons/LoanButtons.css
+++ b/src/components/loan-components/loanbuttons/LoanButtons.css
@@ -1,6 +1,9 @@
 .loan-buttons {
+    padding: 0.8em;
+    display: flex;
+    justify-content: flex-start;
     width: 100%;
-    margin-left: 1.8em;
+ 
 }
 
 .loan-options {
