--- a/src/pages/BookSection/BookSection.css
+++ b/src/pages/BookSection/BookSection.css
@@ -51,12 +51,12 @@
 
 .listbtns{
   display: flex;
-  width: 100%;
+  width:80%;
   height: 100%;
   justify-content: flex-start;
   margin-bottom: 1em;
   align-items: center;
-  margin-left: 1em;
+  margin-left: 0.7em;
 
 }
 .listbtns div button{
